--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends 'user/user_base.html' %}
 
-</body>
-</html>
+{% block title %}
+登录
+{% endblock %}
+
+{% block topic %}
+登录
+{% endblock %}
+
+{% block form %}
+<form action="{{ url_for('user_blueprint.login') }}" method="POST">
+    <div class="form-group">
+        <label for="exampleInputEmail1">邮箱</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">密码</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+    </div>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">记住我</label>
+    </div>
+
+    {% for message in get_flashed_messages() %}
+    <div class="form-group">
+        <div class="text-danger">
+            {{ message }}
+        </div>
+    </div>
+    {% endfor %}
+
+    <div class="from-group text-center">
+        <button type="submit" class="btn btn-primary btn-block">登录</button>
+    </div>
+</form>
+{% endblock %}
